--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,500&display=swap");
 
-*{
-  margin:0;
+* {
+  margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+  --gray-bg-color: #f1f5f9;
 }
 
-a{
+a {
   text-decoration: none;
-  color:inherit;
-  cursor:pointer
+  color: inherit;
+  cursor: pointer;
 }
 
-button{
-  cursor:pointer
+button {
+  cursor: pointer;
 }
 .toast-message {
   top: 2.5rem;
   opacity: 0.9;
-  border-radius:0.2rem;
+  border-radius: 0.2rem;
+}
+.App {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  justify-content: center;
+}
 
+.fa-icons {
+  height: 20px;
+  width: 20px;
 }
