--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   --gray-bg-color: #f1f5f9;
-  --bluish-white:#ebf4ff;
+  --bluish-white:#e2efff;
   --dark-primary:#1e293b;
   --light-primary: ;
 }
@@ -45,4 +45,10 @@ input:focus{
   width: 50px;
   height: 50px;
   border-radius: 50%;
+}
+.posts-outer-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items:center;
 }
