--- a/src/frontend/components/sidebar/Sidebar.css
+++ b/src/frontend/components/sidebar/Sidebar.css
@@ -47,17 +47,19 @@
   background-color: white;
   border-radius: 0.5rem;
 }
-.sidebar-profile > .profile-main {
+.sidebar-profile >a> .profile-main {
   font-size: 0.8rem;
   display: flex;
   gap:0.5rem;
   flex-direction: column;
   align-items: center;
+  cursor:pointer
 }
-.sidebar-profile > .user-img {
+.sidebar-profile >a> .user-img {
   width: 150px;
   height: 150px;
   border-radius: 50%;
+  cursor:pointer;
 }
 .sidebar-profile>.fa-icons{
   color:var(--dark-primary);
