--- a/src/frontend/pages/bookmarks/Bookmarks.css
+++ b/src/frontend/pages/bookmarks/Bookmarks.css
@@ -1,8 +1,10 @@
 .bookmarks {
     background-color: var(--gray-bg-color);
     padding: 2rem;
-    align-self: center;
     min-height:100vh;
+    display:flex;
+    flex-direction:column;
+    gap:1rem;
 
 
 }
