--- a/src/App.css
+++ b/src/App.css
@@ -51,12 +51,13 @@ input:focus{
   flex-direction: column;
   gap: 1rem;
   align-items:center;
+
 }
 
 
 .head {
   display: flex;
   gap: 1rem;
-  padding-top: 1rem;
+  padding: 1rem 0 0 2rem;
   align-items: center;
 }
