--- a/src/frontend/components/post/Post.css
+++ b/src/frontend/components/post/Post.css
@@ -66,7 +66,8 @@
   background-color: var(--bluish-white);
   display:flex;
   flex-direction: column;
-  border:1px solid rgb(213, 228, 255);;
+  border:1px solid rgb(213, 228, 255);
+  z-index:2;
  
   
 
