--- a/src/frontend/pages/profile/Profile.css
+++ b/src/frontend/pages/profile/Profile.css
@@ -1,4 +1,5 @@
 .profile {
+    min-height:100vh;
     background-color: var(--gray-bg-color);
     padding: 2rem;
     align-self: center;
@@ -6,17 +7,20 @@
     flex-direction: column;
     gap: 1.5rem;
 }
-.profile-hero-section{
-    display:flex;
-    flex-direction:column;
-    gap:1rem;
+.profile-hero-section {
+    align-self: center;
+    width: calc(500px + 4rem);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     background-color: white;
-    padding:2rem;
-    border-radius:0.5rem;
+    padding: 2rem;
+    border-radius: 0.5rem;
 }
 .hero-header{
     display:flex;
     justify-content: space-between;
+    align-items: center;
 }
 .hero-header>.user-info {
     display: flex;
@@ -65,6 +69,16 @@
     background-color: var(--bluish-white);
 
 }
+.follow-unfollow-btn{
+    border: 0;
+        padding: 0.5rem 1rem;
+        border-radius: 0.4rem;
+        cursor: pointer;
+        background-color: cornflowerblue;
+            color: white;
+            height:max-content;
+
+}
 .hero-mid{
     display:flex;
     flex-direction: column;
@@ -80,4 +94,8 @@
     
     color:var(--dark-primary);
     
+}
+.profile>.empty-posts-container{
+    align-self:center;
+    padding-top:4rem;
 }
