--- a/src/frontend/components/usersListSidebar/UserslistSidebar.css
+++ b/src/frontend/components/usersListSidebar/UserslistSidebar.css
@@ -55,5 +55,6 @@
     padding:0.5rem 1.25rem;
     border:0;
     border-radius:0.5rem;
-    color:cornflowerblue;
+    color:white;
+    background-color:cornflowerblue;
 }
