--- a/src/frontend/components/usersListSidebar/UserslistSidebar.css
+++ b/src/frontend/components/usersListSidebar/UserslistSidebar.css
@@ -33,18 +33,18 @@
 
 
 }
-.head-left>img{
+.head-left>a>img{
     width:40px;
     height:40px;
     border-radius:50%;
 }
-.head-left{
+.head-left>a{
     display:flex;
     align-items:center;
     font-size:0.8rem;
     gap:0.8rem;
 }
-.head-left>div{
+.head-left>a>div{
     display:flex;
     flex-direction:column;
 
