--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   --gray-bg-color: #f1f5f9;
-  --bluish-white:#e2efff;
-  --dark-primary:#1e293b;
-  --modal-bg:rgba(0, 0, 0, 0.5);
+  --bluish-white: #e2efff;
+  --dark-primary: #1e293b;
+  --modal-bg: rgba(0, 0, 0, 0.5);
 }
 
 a {
@@ -19,8 +19,8 @@ a {
 button {
   cursor: pointer;
 }
-input:focus{
-  outline:none;
+input:focus {
+  outline: none;
 }
 .toast-message {
   top: 2.5rem;
@@ -29,7 +29,8 @@ input:focus{
 }
 .App {
   display: grid;
-  grid-template-columns:1fr 2fr 1fr;
+  grid-template-columns: 2fr 5.75fr 2.25fr;
+
   justify-content: center;
 }
 
@@ -38,8 +39,8 @@ input:focus{
   width: 20px;
 }
 
-.grey-color{
-  color:rgb(67, 84, 128);
+.grey-color {
+  color: rgb(67, 84, 128);
 }
 .user-img {
   width: 50px;
@@ -50,14 +51,22 @@ input:focus{
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  align-items:center;
-
+  align-items: center;
 }
-
 
 .head {
   display: flex;
   gap: 1rem;
   padding: 1rem 0 0 2rem;
   align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .App {
+    grid-template-columns: 30% 70%;
+  }
+}
+@media screen and (max-width: 650px) {
+  .App {
+    grid-template-columns: 100%;
+  }
 }
