--- a/src/frontend/pages/notFound/NotFound.css
+++ b/src/frontend/pages/notFound/NotFound.css
@@ -1,23 +1,22 @@
-.not-found-page{
- 
-    display:flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
+.not-found-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.not-found-page>img{
-    width:50vw;
+.not-found-page > img {
+  width: 50%;
 }
-.not-found-page>a>button{
-    padding:0.8rem 1.25rem;
-    background-color: cornflowerblue;
-    color:white;
-    font-size:1rem;
-    border:0;
-    border-radius:0.5rem;
-    display:flex;
-    gap:1rem;
-    align-items: center;
+.not-found-page > a > button {
+  padding: 0.8rem 1.25rem;
+  background-color: cornflowerblue;
+  color: white;
+  font-size: 1rem;
+  border: 0;
+  border-radius: 0.5rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
