--- a/src/frontend/components/createPost/CreatePost.css
+++ b/src/frontend/components/createPost/CreatePost.css
@@ -13,10 +13,17 @@
 .outside-click {
   position: fixed;
   height: 100vh;
-  /* width: 100vw; */
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background-color: var(--modal-bg);
+}
+.create-post-modal > .inner-container {
+  width: 60%;
+}
+@media screen and (max-width: 650px) {
+  .create-post-modal > .inner-container {
+    width: 80%;
+  }
 }
