--- a/src/frontend/components/avatarModal/AvatarModal.css
+++ b/src/frontend/components/avatarModal/AvatarModal.css
@@ -1,39 +1,44 @@
-.choose-avatar{
-    position: absolute;
-        top: -5%;
-        left: -20%;
-        z-index: 2;
-        display: flex;
-        flex-direction: column;
-        padding: 2rem;
-        background-color: whitesmoke;
-        border-radius: 0.5rem;
+.choose-avatar {
+  position: absolute;
+  top: -5%;
+  left: -20%;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  background-color: whitesmoke;
+  border-radius: 0.5rem;
 }
-.choose-avatar>.avatars{
-    display:grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 1rem;
-    grid-template-rows: repeat(2,1fr);
-    grid-row-gap: 1rem;
+.choose-avatar > .avatars {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 1rem;
+  grid-template-rows: repeat(2, 1fr);
+  grid-row-gap: 1rem;
 }
-.choose-avatar>.avatars>img{
-    width:60px;
-    height:60px;
-    border-radius:50%;
-    
+.choose-avatar > .avatars > img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
 }
-.choose-avatar>.xmark{
-    position: absolute;
-        width: 15px;
-        height: 15px;
-        top: -4%;
-        right: -4%;
-        padding: 0.5rem;
-        color: white;
-        background-color: rgb(60, 90, 145);
-        border-radius: 50%;
-        cursor: pointer;
+.choose-avatar > .xmark {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  top: -4%;
+  right: -4%;
+  padding: 0.5rem;
+  color: white;
+  background-color: rgb(60, 90, 145);
+  border-radius: 50%;
+  cursor: pointer;
 }
-.avatars>img{
-    cursor:pointer
+.avatars > img {
+  cursor: pointer;
+}
+@media screen and (max-width: 650px) {
+  .choose-avatar {
+    top: -20%;
+    left: -125%;
+  }
 }
