--- a/src/frontend/components/post/Post.css
+++ b/src/frontend/components/post/Post.css
@@ -5,7 +5,7 @@
   background-color: white;
   padding: 2rem;
   border-radius: 0.5rem;
-  width: calc(500px + 4rem);
+  width: 100%;
 }
 .post-head {
   position: relative;
@@ -35,7 +35,7 @@
   padding-bottom: 1rem;
 }
 .post-content > img {
-  width: 500px;
+  width: 100%;
   max-height: 600px;
   border-radius: 0.5rem;
 }
@@ -121,10 +121,26 @@
 
 @media screen and (max-width: 768px) {
   .post-outer-container {
-    width: calc(350px + 4rem);
+    width: 100%;
   }
   .post-content > img {
-    width: 350px;
-    height: 350px;
+    width: 100%;
+    height: 300px;
+  }
+}
+@media screen and (max-width: 452px) {
+  .post-head-left > .post-user-info {
+    gap: 0.2rem;
+  }
+  .post-user-info > div > span:first-of-type {
+    display: none;
+  }
+  .post-user-info > span {
+    font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 380px) {
+  .post-outer-container {
+    padding: 1rem;
   }
 }
