--- a/src/frontend/components/usersListSidebar/UserslistSidebar.css
+++ b/src/frontend/components/usersListSidebar/UserslistSidebar.css
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  padding: 2rem;
+  padding: 2rem 2rem 2rem 0;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -29,6 +29,7 @@
   justify-content: space-between;
   border-radius: 0.5rem;
   gap: 1rem;
+  align-items: center;
 }
 .head-left > a > img {
   width: 40px;
@@ -54,4 +55,33 @@
   border-radius: 0.5rem;
   color: white;
   background-color: cornflowerblue;
+}
+@media screen and (min-width: 1201px) {
+  .follow-icon {
+    display: none;
+  }
+  .users-sidebar {
+    padding-left: 2rem;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .follow-icon {
+    display: none;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .users-sidebar > .users-list > div {
+    gap: 0.5rem;
+  }
+  .follow-btn {
+    display: none;
+  }
+  .follow-icon {
+    display: block;
+  }
+}
+@media screen and (max-width: 768px) {
+  .users-sidebar {
+    display: none;
+  }
 }
