--- a/src/frontend/pages/loginSignup/loginSignup.css
+++ b/src/frontend/pages/loginSignup/loginSignup.css
@@ -14,7 +14,7 @@
   align-items: center;
   justify-content: center;
 }
-.auth-hero-container > .logo {
+.auth-hero-container > .logo-head {
   font-size: 3rem;
   color: cornflowerblue;
 }
@@ -96,7 +96,7 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .auth-hero-container > .logo {
+  .auth-hero-container > .logo-head {
     font-size: 2.25rem;
   }
   .auth-hero-container > h1:nth-of-type(2) {
@@ -108,7 +108,7 @@
     flex-direction: column;
     justify-content: center;
   }
-  .auth-hero-container > .logo {
+  .auth-hero-container > .-head {
     font-size: 1.5rem;
   }
   .auth-hero-container > h1:nth-of-type(2) {
@@ -123,5 +123,10 @@
   .auth-flex-container > input,
   .auth-flex-container > div > input {
     font-size: 0.8rem;
+  }
+}
+@media only screen and (max-width: 380px) {
+  .auth-hero-container > .logo-head {
+    font-size: 1.25rem;
   }
 }
