--- a/src/frontend/components/sidebar/Sidebar.css
+++ b/src/frontend/components/sidebar/Sidebar.css
@@ -87,7 +87,7 @@
 .icon-navbar > .active {
   color: cornflowerblue;
 }
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .nav-sidebar {
     display: none;
   }
@@ -158,7 +158,7 @@
   .icon-navbar {
     border: none;
     padding: 1rem 0;
-    position: sticky;
+    position: fixed;
     bottom: 0;
     right: 0;
     left: 0;
